tests/samples/invalid/missing_semicolon_var.pn
fn main()
{
	var x = 10
	var y = 20;
}
